fixed bug where cursor wouldnt turn to pointer on play by setting z-index

--- a/main.css
+++ b/main.css
@@ -147,9 +147,9 @@ main {
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
-  user-select: none;
   transition: all 1s ease;
   cursor: pointer;
+  z-index: 5;
 }
 .full-page {
   height: 100vh;
